# splitspot-analytics

./: .gitignore  README.md  dbt_project.yml  production.yml  profile.example.yml  profiles.example.yml  pyproject.toml
models/archived_models/: applicant_lease_length_of_stay_weekly.sql  applicant_leases_source_weekly.sql  applicant_source_monthly.sql  applications_length_of_stay_monthly.sql  applications_length_of_stay_weekly.sql  leases_signed_source_monthly.sql  leases_summary_length_of_stay.sql  leases_summary_length_of_stay_monthly.sql  room_summaries_couples_allowed.sql  room_summary_neighbourhood.sql
models/marts/: apartment_performance.sql  apartment_performance_monthly.sql  apartment_performance_weekly.sql  applicant_lease_length_of_stay.sql  applicant_lease_length_of_stay_monthly.sql  applicant_lease_neighbourhood.sql  applicant_lease_source.sql  applicant_lease_source_monthly.sql  applicant_pipeline.sql  distinct_applicant_pipeline.sql  distinct_lead_profile.sql  lead_profile.sql  lead_timeline.sql  time_dim.sql
models/marts/Financials/: Customer_acquisition_cost.sql  apartment_onboarded.sql  customer_lifetime_value.sql  property_cac.sql  tenant_cac.sql
models/marts/apartment_analyses/: apartment_joined_listings.sql  apartment_joined_listings_properties.sql  buildium_tenancy.sql
models/marts/applicant_analyses/: applicant_lease_length_of_stay.sql  (+6 more)
models/sources/: development.yml  source.yml
models/staging/: stg_buildium_tenancy.sql  stg_feedback.sql  stg_leases.sql  stg_listing.sql  stg_rsvps.sql  stg_time_on_market.sql  stg_webstats.sql
(+82 files in other folders)
